--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-    "name" : "qwebirc",
+    "name": "qwebirc",
     "description": "socket.io irc server for qwebirc",
     "repository": "https://github.com/megawac/qwebirc-enhancements",
-    "version" : "0.0.1",
+    "version": "0.0.1",
     "author": {
         "name": "Graeme Yeates",
         "email": "megawac@gmail.com"
     },
-    "dependencies" : {
+    "engines": {
+        "node": ">= 0.6.0",
+        "npm": ">= 1.0.0"
+    },
+    "dependencies": {
         "socket.io": "0.9.x",
-        "express": "3.3.x"
-    }
+        "express": "3.x.x"
+    },
+    "main": "root.js"
 }
