--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     },
     "dependencies": {
         "socket.io": "0.9.x",
-        "express": "3.x.x"
+        "express": "3.x.x",
+        "underscore": ">= 1.5.0"
     },
     "main": "root.js"
 }
